Adjusted core JSON data and some sample json data.

--- a/resources/public/data/System/config.json
+++ b/resources/public/data/System/config.json
@@ -1,1 +1,1 @@
-{"config_name":"config","system_name":"tames","system_label":"tames","system_description":"A general-purpose CRUD Web application system."}
+{"config_name":"config","system_name":"tames","system_label":"tames","system_description":"Throw Away Many Emails and Spreadsheets."}
