Corresponded some views & controls to w2ui library.

--- a/resources/public/data/System/config.json
+++ b/resources/public/data/System/config.json
@@ -1,1 +1,1 @@
-{"config_name":"config","system_name":"tames","system_label":"tames","system_description":"Throw Away Many Emails and Spreadsheets."}
+{"config_name":"config","system_name":"tames","system_label":"tames","system_description":"'tames' was initial charactors of \nThrow Away Many Emails & Spreadsheets."}
