--- a/resources/public/data/System/config.json
+++ b/resources/public/data/System/config.json
@@ -1,1 +1,1 @@
-{"config_name":"config","system_name":"tames","system_label":"tames","system_description":"Throw Away Many Emails & Spreadsheets."}
+{"config_name":"config","logo":{"class_id":"System","object_id":"config","current":[{"name":"tames.svg","size":5228}]},"favicon":{"class_id":"System","object_id":"config","current":[{"name":"tames.ico","size":1150}]},"system_name":"tames","system_label":"tames","system_description":"Throw Away Many Emails & Spreadsheets."}
